	  (and who knows how many other bugs).
	Rev 7231:
	* npcnear.cc: Disabling old proximity usecode method. The rabbit hack is not
	  needed anymore since patrol schedule does what it should, so it has gone.
	* schedule.*: Only loiter, tend shop, dance, hound, sew and bake schedules
	  seem to call proximity usecode in the original. This fixes bug #3598581
	  "Barks in Serpents' Isle".

2012-12-27	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* all: Removed ungodly amount of uneeded data copies when passing tiles and
	  rectangles around by using const references when possible.
	* effects.cc: Particledrop base class needs virtual destructor.
	* paths.cc: Fixed bug #3597397 "can move objects through the door" by using
	  maximum delta-z of 1 in Fast_pathfinder_client::get_step_cost. SI crystal
	  balls are fixed the "proper" way by trying to get within a radius equal to
	  the object's smallest 2d dimension plus 1 from the object.
	* pathfinder/path.cc: Improved path tracing slightly by having it also print
	  z coordinates.
	* paths.cc: Fixed a few incorrect results for grabbing objects through walls
	  re-introduced in commit #7224.
	* paths.cc: Fixed incorrect blocked objects from commits #7224-#7225.
	* gamewin.h, drag.cc, gumps/Gump_manager.cc: Fixed segfault on dragging a
	  gump and deleting it at the same time (e.g., right click closes gumps).

2012-12-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/*: Fixed longstanding bug in usecode symbol table. Also fixed bug
	  #3011723 "Keyring Mod - targeted NPC spells" by adding a second opcode for
	  indirect function calls with parameters.

2012-12-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* configure.ac: Added an option (--enable-pedantic-warnings) to build with
	  pedantic warnings, which is independent of other warning options. Removed
	  some stray left-overs from GIMP plugin code, and fixed version numbers.
	  Some identation changes.